--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,10 +1,9 @@
 .main {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
-  min-height: 100vh;
+  position: relative; */
 }
 
 @keyframes rotate {
